--- a/examples/optimize-qcbm-circuit.yaml
+++ b/examples/optimize-qcbm-circuit.yaml
@@ -27,11 +27,18 @@ resources:
   parameters:
     url: "git@github.com:zapatacomputing/qe-qhipster.git"
     branch: "dev"
+- name: qe-honeywell
+  type: git
+  parameters:
+    url: "git@github.com:zapatacomputing/qe-honeywell.git"
+    branch: "master"
+
 - name: qe-openfermion
   type: git
   parameters:
     url: "git@github.com:zapatacomputing/qe-openfermion.git"
     branch: "dev"
+
 
 # Specify the prefix to use when generating names of workflow executions.
 metadata:
@@ -45,7 +52,7 @@ spec:
     parameters:
     - s3-bucket: quantum-engine
     - s3-key: projects/z-quantum-qcbm/qcbm-opt
-
+ 
   templates:
 
   - name: main
@@ -54,36 +61,39 @@ spec:
         template: generate-random-qcbm-params
         arguments:
           parameters:
-          - n-qubits: "4"
+          - n-qubits: "6"
           - n-layers: "4"
           - seed: "14"
           - topology: "all"
           - min-val: "-1.57"
           - max-val: "1.57"
           - resources: [z-quantum-core, z-quantum-qcbm]
-      - name: get-bars-and-stripes-distribution
+
+    - - name: get-bars-and-stripes-distribution
         template: generate-bars-and-stripes-target-distribution
         arguments:
           parameters:
-          - nrows: "2"
+          - nrows: "3"
           - ncols: "2"
           - fraction: "1.0"
           - method: "zigzag"
           - resources: [z-quantum-core, z-quantum-qcbm]
+
     - - name: optimize-circuit
         template: optimize-variational-qcbm-circuit
         arguments:
           parameters:
-          - n-qubits: "4"
+          - n-qubits: "6"
           - n-layers: "4"
           - topology: "all"
           - epsilon: "0.000001"
           - distance-measure-specs: "{'module_name': 'zquantum.core.bitstring_distribution', 'function_name': 'compute_clipped_negative_log_likelihood'}"
-          - backend-specs: "{'module_name': 'qeforest.simulator', 'function_name': 'ForestSimulator', 'device_name': 'wavefunction-simulator'}"
+          # - backend-specs: "{'module_name': 'qeforest.simulator', 'function_name': 'ForestSimulator', 'device_name': 'wavefunction-simulator'}"
+          - backend-specs: "{'module_name': 'qehoneywell.backend', 'function_name': 'HoneywellBackend', 'device_name': 'HQS-LT-1.0-APIVAL', 'token': 'ANrxPHBNLF9F2D9J8kenA771qvSD29vJ9qBbKzNg', 'pwd': 'Zapatahoneywell1', 'user_name': 'bperopadre@zapatacomputing.com'}"
           - optimizer-specs: "{'module_name': 'zquantum.optimizers.cma_es_optimizer', 'function_name': 'CMAESOptimizer', 'options': {'popsize': 5, 'sigma_0': 0.1, 'tolx': 1e-6}}"
           # - optimizer-specs: "{'module_name': 'zquantum.optimizers.scipy_optimizer', 'function_name': 'ScipyOptimizer', 'method': 'L-BFGS-B'}"
-          - resources: [z-quantum-core, qe-openfermion, z-quantum-optimizers, qe-forest, z-quantum-qcbm]
-          - memory: 2048Mi
+          - resources: [z-quantum-core, qe-openfermion, z-quantum-optimizers, qe-forest, z-quantum-qcbm, qe-honeywell]
+          - memory: 8000Mi
           artifacts:
           - initial-parameters:
               from: "{{steps.get-initial-parameters.outputs.artifacts.parameters}}"
