correcting typo relating to output artifact in task for computing likelihood

--- a/templates/qcbm-optimization.yaml
+++ b/templates/qcbm-optimization.yaml
@@ -175,7 +175,7 @@ spec:
 
     outputs:
       artifacts:
-        name: negative-clipped-log-likelihood
+      - name: negative-clipped-log-likelihood
         path: /app/negative-clipped-log-likelihood.json
         
 
