--- a/templates/qcbm-optimization.yaml
+++ b/templates/qcbm-optimization.yaml
@@ -161,15 +161,17 @@ spec:
         path: /app/main_script.py
         raw:
           data: |
-            from zquantum.core.bitstring_distribution import compute_clipped_negative_log_likelihood, load_bitstring_distribution
+            from zquantum.core.bitstring_distribution.distance_measures import compute_clipped_negative_log_likelihood
+            from zquantum.core.bitstring_distribution load_bitstring_distribution
             from zquantum.core.measurement import Measurements
             from zquantum.core.utils import save_list
             
             measurements = Measurements.load_from_file('measurements.json')
             measured_distribution = measurements.get_distribution()
             target_distribution = load_bitstring_distribution("target-distribution.json")
+            distance_measure_params = {"epsilon": 1e-9}
             negative_clipped_log_likelihood = []
-            negative_clipped_log_likelihood.append(compute_clipped_negative_log_likelihood(target_distribution, measured_distribution))
+            negative_clipped_log_likelihood.append(compute_clipped_negative_log_likelihood(target_distribution, measured_distribution,distance_measure_params))
             save_list(negative_clipped_log_likelihood, 'negative-clipped-log-likelihood.json')
 
     outputs:
