--- a/examples/run-qcbm-circuit-from-subset-of-epochs.yaml
+++ b/examples/run-qcbm-circuit-from-subset-of-epochs.yaml
@@ -14,7 +14,7 @@ resources:
   type: git
   parameters:
     url: "git@github.com:zapatacomputing/z-quantum-qcbm.git"
-    branch: "honeywel-experiment"
+    branch: "honeywell-experiment"
 - name: z-quantum-optimizers
   type: git
   parameters:
