--- a/templates/qcbm-optimization.yaml
+++ b/templates/qcbm-optimization.yaml
@@ -64,3 +64,26 @@ spec:
         path: /app/optimization-results.json
       - name: optimized-parameters
         path: /app/optimized-parameters.json
+
+  - name: extract-favorite-parameters
+    parent: generic-task
+    inputs:
+      parameters:
+      - name: command
+        value: python3 main_script.py
+      artifacts:
+      - name: optimization-results
+        path: /app/optimization-results.json
+      - name: main-script
+        path: /app/main_script.py
+        raw:
+          data: |
+            from zquantum.optimizers.utils import load_optimization_results
+
+            opt_results=load_optimization_results("optimization-results.json")
+
+            save_circuit_template_params(opt_results.cma_xfavorite, "optimized-parameters.json")
+    outputs:
+      artifacts:
+      - name: optimized-parameters
+        path: /app/optimized-parameters.json
