--- a/templates/qcbm-optimization.yaml
+++ b/templates/qcbm-optimization.yaml
@@ -82,6 +82,8 @@ spec:
             from zquantum.core.circuit import save_circuit_template_params
 
             opt_results=load_optimization_results("optimization-results.json")
+            print("CMA",opt_results.cma_xfavorite)
+            print("best", opt_results.opt_params)
 
             save_circuit_template_params(opt_results.cma_xfavorite, "optimized-parameters.json")
     outputs:
