--- a/templates/qcbm-optimization.yaml
+++ b/templates/qcbm-optimization.yaml
@@ -80,12 +80,13 @@ spec:
           data: |
             from zquantum.optimizers.utils import load_optimization_results
             from zquantum.core.circuit import save_circuit_template_params
+            import numpy as np
 
             opt_results=load_optimization_results("optimization-results.json")
-            print("CMA",opt_results.cma_xfavorite)
-            print("best", opt_results.opt_params)
+            print("CMA",type(opt_results.cma_xfavorite))
+            print("best", type(opt_results.opt_params))
 
-            save_circuit_template_params(opt_results.cma_xfavorite, "optimized-parameters.json")
+            save_circuit_template_params(np.array(opt_results.cma_xfavorite), "optimized-parameters.json")
     outputs:
       artifacts:
       - name: optimized-parameters
